# cvrunner

./: .buildinfo  .dockerignore  .env.example  .gitignore  README.md  cvrunner.experiment.html  cvrunner.html  cvrunner.runner.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.doctrees/: cvrunner.doctree  cvrunner.experiment.doctree  cvrunner.runner.doctree  environment.pickle  index.doctree
.github/workflows/: build_base-amd.yml  build_base-arm.yml  build_base.yml  deploy_docs.yml
_sources/: cvrunner.experiment.rst.txt  cvrunner.runner.rst.txt
base_environments/: Dockerfile  Dockerfile.arm
behavior_tests/: test_logger.py
cvrunner/: __init__.py  cli.py  distributed_train_script.py
cvrunner/experiment/: experiment.py
cvrunner/runner/: __init__.py  base_runner.py  distributed_train_runner.py  runner.py  train_runner.py
cvrunner/utils/: distributed.py  logger.py  utils.py
docs/source/: conf.py  cvrunner.rst  index.rst
environments/: Dockerfile  Dockerfile.arm  docker-compose-arm.yml  docker-compose.yml
environments/k8s/: job-template.yml
tests/: test_runner.py
tests/test_cli/: test_run_local.py
tests/test_functions/: dummy_dataset.py  test_runner.py
tests/test_generator/: mnist_components.py
